--- a/app/src/main/res/layout/activity_home_page_2.xml
+++ b/app/src/main/res/layout/activity_home_page_2.xml
@@ -34,24 +34,29 @@
                 android:textSize="21sp"
                 android:textStyle="bold" />
         </LinearLayout>
+
         <android.support.v7.widget.CardView
             android:layout_width="400dp"
             android:layout_height="120dp"
-            android:background="@drawable/cardview"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="80dp"
-            >
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/cardview">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="3">
+
                 <LinearLayout
-                    android:gravity="center"
-                    android:orientation="vertical"
                     android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:layout_height="match_parent">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/searchByLocationImageView"
@@ -71,12 +76,13 @@
                         android:textStyle="bold" />
 
                 </LinearLayout>
+
                 <LinearLayout
-                    android:gravity="center"
-                    android:orientation="vertical"
                     android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:layout_height="match_parent">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/searchByTagImageView"
@@ -96,12 +102,14 @@
                         android:textStyle="bold" />
 
                 </LinearLayout>
+
                 <LinearLayout
-                    android:gravity="center"
-                    android:orientation="vertical"
                     android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:layout_height="match_parent">
+                    android:gravity="center"
+                    android:orientation="vertical">
+
                     <ImageView
                         android:id="@+id/recommendingImageView"
                         android:layout_width="63dp"
