--- a/app/src/main/res/layout/activity_search_by_tags_only.xml
+++ b/app/src/main/res/layout/activity_search_by_tags_only.xml
@@ -173,10 +173,11 @@
 
 
         <HorizontalScrollView
-            android:layout_width="409dp"
-            android:layout_height="45dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/typeOfActivityTextView1o">
 
@@ -343,7 +344,7 @@
 
     <ListView
         android:id="@+id/tagActivityListView"
-        android:layout_width="388dp"
+        android:layout_width="match_parent"
         android:layout_height="306dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
